vix/tests/checker-corpus/reject/irrefutable-arm-not-last.vix
fn main(x: Int) -> Int {
    match x {
        _ => 1,
        2 => 2,
    }
}
